tests/ui/attr_name_value.stderr
error: fixcol-derive error: Could not read config from name/value style attribute.

       Expected parameters like #[fixed(width = 4)]
 --> tests/ui/attr_name_value.rs:5:15
  |
5 |     #[fixed = "path/goes/here"]
  |               ^^^^^^^^^^^^^^^^
